--- a/.github/workflows/android-pipeline.yml
+++ b/.github/workflows/android-pipeline.yml
@@ -1,6 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# Android pipeline
 
-name: CI
+name: android CI
 
 # Controls when the workflow will run
 on:
@@ -25,12 +25,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # Linter for kotlin     
+      # GitHub Action for ktlint - GitHub Marketplace. (no date). GitHub. Available from https://github.com/marketplace/actions/github-action-for-ktlint [Accessed 4 April 2023].
+      - name: GitHub Action for ktlint
+        # You may pin to the exact commit or the version.
+        # uses: yutailang0119/action-ktlint@0ad7b2f5129db30cfb63fd494270c348ae5f1ad6
+        uses: yutailang0119/action-ktlint@v3.1.0
+        with:
+          # The lint report file path. Support glob patterns. e.g `build/*.xml`
+          report-path: 'build/reports/ktlint/ktlint-report.xml'
+          # Indicates whether to follow symbolic links
+          follow-symbolic-links: 'true'
